--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -215,7 +215,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../hemo-plus/hemo-plus.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
